--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
         <!-- PROPERTY FILTER SEARCH SECTION START -->
         <section class="ul-property-filter-search ul-section-spacing pt-0">
             <div class="ul-property-filter-search-container">
-                <h3 class="ul-property-filter-search-title text-center wow animate__fadeInUp">Join As Property Partner
+                <h3 class="ul-property-filter-search-title text-center wow animate__fadeInUp">Join As Channel Partner
                 </h3>
                 <form action="#" class="ul-property-filter-search-form wow animate__fadeInUp">
                     <div class="form-group">
@@ -1113,7 +1113,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-1.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-1.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Kolkata</a></h3>
@@ -1125,7 +1125,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-2.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-2.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Siliguri</a></h3>
@@ -1137,7 +1137,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-3.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-3.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Asansol</a></h3>
@@ -1149,7 +1149,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-4.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-4.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Howrah</a></h3>
@@ -1161,7 +1161,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-5.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-5.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Malda</a></h3>
@@ -1173,7 +1173,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-6.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-6.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Midnapore</a></h3>
@@ -1185,7 +1185,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-7.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-7.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Durgapur</a></h3>
@@ -1197,7 +1197,7 @@
                     <!-- single city -->
                     <div class="col">
                         <div class="ul-city">
-                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-8.jpg"
+                            <div class="img"><a href="javascript:void(0)"><img src="assets/img/city-8.jpg?var=01"
                                         alt="City Image"></a></div>
                             <div class="txt">
                                 <h3 class="ul-city-title"><a href="javascript:void(0)">Bankura</a></h3>
