--- a/property-portal.html
+++ b/property-portal.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/vendor/animate-wow/animate.min.css">
 
     <!-- custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css?var=01">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 </head>
 
