--- a/property-portal.html
+++ b/property-portal.html
@@ -128,7 +128,7 @@
                 <div class="ul-project-details-body">
                     <div class="row gy-5">
                         <!-- left -->
-                        <div class="col-lg-6">
+                        <div class="col-6">
                             <!-- Add a review -->
                             <div
                                 class="mt-5 ul-project-details-block ul-project-details-sidebar ul-project-details-review-form-wrapper wow animate__fadeIn">
@@ -192,7 +192,7 @@
                             </div>
                         </div>
                         <!-- right sidebar -->
-                        <div class="col-lg-6 d-flex justify-content-end align-items-end">
+                        <div class="col-6 d-flex justify-content-end align-items-end">
                             <img src="./assets/img/interior-design.png" class="w-75" alt="">
                         </div>
                         <div class="d-none col-lg-6 pt-5 h-100  position-relative">
@@ -212,7 +212,7 @@
 
                     </div>
                     <div class="row gy-5">
-                        <div class="col-lg-6 pt-5 h-100  position-relative">
+                        <div class="col-6 pt-5 h-100  position-relative">
                             <h2 class="pt-5 "><span>Connect</span> with Our Team of Experts</h2>
                             <p>Connect our team of excellence-driven experts today to bring your project to life.</p>
                             <div class="d-flex justify-content-between align-items-center col-6">
@@ -226,7 +226,7 @@
                                     style="bottom: 0px; right: 0px;" alt="">
                             </div>
                         </div>
-                        <div class="col-lg-6 pt-5 " id="rentbuysale">
+                        <div class="col-6 pt-5 " id="rentbuysale">
                             <div class="bg-dark text-light mt-5 ul-project-details-sidebar wow animate__fadeInUp">
                                 <h3 class="ul-project-details-sidebar-title">Rent - Buy - Sale</h3>
 
