--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                             <a href="index.html">Home</a>
                             <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
-                            <a href="property-portal.html#postproperty">Post Your Property</a>
+                            <a href="post-property.html">Post Your Property</a>
 
                             <a href="contact.html">Contact</a>
                         </nav>
