--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <a href="javascript:void(0)">Home</a>
                             <a href="about.html">About</a>
                             <a href="javascript:void(0)">Property</a>
-                            <a href="property-portal.html#postproperty">Post Your Property</a>
+                            <a href="post-property.html">Post Your Property</a>
 
                             <a href="contact.html">Contact</a>
                         </nav>
@@ -162,7 +162,7 @@
                                                 <p class="ul-banner-slide-descr">Share your requirements, and we’ll
                                                     ensure a seamless property deal experience.</p>
                                                 <div class="ul-banner-slide-btns">
-                                                    <a href="property-portal.html#postproperty" class="ul-btn">Post
+                                                    <a href="post-property.html" class="ul-btn">Post
                                                         Your Property</a>
                                                 </div>
                                             </div>
@@ -196,7 +196,7 @@
                                                 <p class="ul-banner-slide-descr">Looking for property solutions <br>
                                                     within West Bengal.</p>
                                                 <div class="ul-banner-slide-btns">
-                                                    <a href="property-portal.html#rentbuysale" class="ul-btn">Rent -
+                                                    <a href="rentbuysale-property.html" class="ul-btn">Rent -
                                                         Buy -
                                                         Sale</a>
                                                 </div>
