--- a/post-property.html
+++ b/post-property.html
@@ -120,7 +120,7 @@
         </div>
         <!-- BREADCRUMB SECTION END -->
 
-        <div class="ul-inner-page-content-wrapper">
+        <div class="form-section form-section1 ul-inner-page-content-wrapper">
             <div class="ul-inner-page-container">
                 <!-- heading -->
 
@@ -131,7 +131,7 @@
                         <div class="col-lg-6">
                             <!-- Add a review -->
                             <div
-                                class="mt-5 ul-project-details-block ul-project-details-sidebar ul-project-details-review-form-wrapper wow animate__fadeIn">
+                                class="bg-light mt-5 ul-project-details-block ul-project-details-sidebar ul-project-details-review-form-wrapper wow animate__fadeIn">
                                 <h3 class="ul-project-details-title">Post Your Property</h3>
                                 <form class="ul-project-details-review-form wow animate__fadeInUp">
 
