--- a/rentbuysale-property.html
+++ b/rentbuysale-property.html
@@ -120,7 +120,7 @@
         </div>
         <!-- BREADCRUMB SECTION END -->
 
-        <div class="ul-inner-page-content-wrapper" id="postproperty">
+        <div class="form-section form-section2 ul-inner-page-content-wrapper" id="postproperty">
             <div class="ul-inner-page-container">
                 <!-- heading -->
 
@@ -128,15 +128,17 @@
                 <div class="ul-project-details-body">
                     <div class="row my-5">
                         <div class="col-lg-6 h-100  position-relative">
-                            <h2 class=" "><span>Connect</span> with Our Team of Experts</h2>
-                            <p>Connect our team of excellence-driven experts today to bring your project to life.</p>
+                            <h2 class="text-white"><span>Connect</span> with Our Team of Experts</h2>
+                            <p class=" text-white">Connect our team of excellence-driven experts today to bring your
+                                project to life.</p>
                             <br>
-                            <div><a href="tel:+918597978485">+91 8597978485</a></div>
-                            <div><a href="mailto:infokalpurush@yahoo.com">infokalpurush@yahoo.com</a></div>
+                            <div><a href="tel:+918597978485" class=" text-white">+91 8597978485</a></div>
+                            <div><a href="mailto:infokalpurush@yahoo.com"
+                                    class=" text-white">infokalpurush@yahoo.com</a></div>
                             <br>
                             <div class="bg-dark text-white mt-3 p-5 rounded">
                                 <h5 class="">Want to join <br> our talented team?</h5>
-                                <p class="">VISIT OUR JOB BOARD ></p>
+                                <p class="text-white">VISIT OUR JOB BOARD ></p>
                                 <img src="./assets/img/interior-design.png" class="position-absolute" width="200"
                                     style="bottom: 0px; right: 0px;" alt="">
                             </div>
