--- a/rentbuysale-property.html
+++ b/rentbuysale-property.html
@@ -110,7 +110,7 @@
         <!-- BREADCRUMB SECTION START -->
         <div class="ul-breadcrumb">
             <div class="wow animate__fadeInUp">
-                <h2 class="ul-breadcrumb-title">Property Actions Center</h2>
+                <h2 class="ul-breadcrumb-title text-white">Property Actions Center</h2>
                 <div class="ul-breadcrumb-nav">
                     <a href="index.html">Home</a>
                     <span class="separator"><i class="flaticon-aro-left"></i></span>
@@ -126,19 +126,17 @@
 
                 <!-- body -->
                 <div class="ul-project-details-body">
-                    <div class="row my-5">
+                    <div class="row py-5">
                         <div class="col-lg-6 h-100  position-relative">
-                            <h2 class="text-white"><span>Connect</span> with Our Team of Experts</h2>
-                            <p class=" text-white">Connect our team of excellence-driven experts today to bring your
-                                project to life.</p>
+                            <h2 class=" "><span>Connect</span> with Our Team of Experts</h2>
+                            <p>Connect our team of excellence-driven experts today to bring your project to life.</p>
                             <br>
-                            <div><a href="tel:+918597978485" class=" text-white">+91 8597978485</a></div>
-                            <div><a href="mailto:infokalpurush@yahoo.com"
-                                    class=" text-white">infokalpurush@yahoo.com</a></div>
+                            <div><a href="tel:+918597978485">+91 8597978485</a></div>
+                            <div><a href="mailto:infokalpurush@yahoo.com">infokalpurush@yahoo.com</a></div>
                             <br>
                             <div class="bg-dark text-white mt-3 p-5 rounded">
                                 <h5 class="">Want to join <br> our talented team?</h5>
-                                <p class="text-white">VISIT OUR JOB BOARD ></p>
+                                <p class="">VISIT OUR JOB BOARD ></p>
                                 <img src="./assets/img/interior-design.png" class="position-absolute" width="200"
                                     style="bottom: 0px; right: 0px;" alt="">
                             </div>
