--- a/portal/my-properties.html
+++ b/portal/my-properties.html
@@ -346,7 +346,7 @@
                                     <div class="col-sm-6 col-md-4">
                                         <div class="box-house hover-img ">
                                             <div class="image-wrap">
-                                                <a href="property-detail-v1.html">
+                                                <a href="#">
                                                     <img class="lazyload" data-src="images/section/box-house.jpg"
                                                         src="images/section/box-house.jpg" alt="">
                                                 </a>
@@ -357,7 +357,7 @@
                                             </div>
                                             <div class="content">
                                                 <h5 class="title">
-                                                    <a href="property-detail-v1.html">Property Name</a>
+                                                    <a href="#">Property Name</a>
 
                                                 </h5>
                                                 <p class="location text-1 line-clamp-1 ">
@@ -397,8 +397,7 @@
                                                     </div>
                                                     <div class="wrap-btn flex">
 
-                                                        <a href="property-detail-v1.html"
-                                                            class="tf-btn style-border pd-4">Details</a>
+                                                        <a href="#" class="tf-btn style-border pd-4">Details</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -407,7 +406,7 @@
                                     <div class="col-sm-6 col-md-4">
                                         <div class="box-house hover-img ">
                                             <div class="image-wrap">
-                                                <a href="property-detail-v1.html">
+                                                <a href="#">
                                                     <img class="lazyload" data-src="images/section/box-house.jpg"
                                                         src="images/section/box-house.jpg" alt="">
                                                 </a>
@@ -418,7 +417,7 @@
                                             </div>
                                             <div class="content">
                                                 <h5 class="title">
-                                                    <a href="property-detail-v1.html">Property Name</a>
+                                                    <a href="#">Property Name</a>
 
                                                 </h5>
                                                 <p class="location text-1 line-clamp-1 ">
@@ -458,8 +457,7 @@
                                                     </div>
                                                     <div class="wrap-btn flex">
 
-                                                        <a href="property-detail-v1.html"
-                                                            class="tf-btn style-border pd-4">Details</a>
+                                                        <a href="#" class="tf-btn style-border pd-4">Details</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -468,7 +466,7 @@
                                     <div class="col-sm-6 col-md-4">
                                         <div class="box-house hover-img ">
                                             <div class="image-wrap">
-                                                <a href="property-detail-v1.html">
+                                                <a href="#">
                                                     <img class="lazyload" data-src="images/section/box-house.jpg"
                                                         src="images/section/box-house.jpg" alt="">
                                                 </a>
@@ -479,7 +477,7 @@
                                             </div>
                                             <div class="content">
                                                 <h5 class="title">
-                                                    <a href="property-detail-v1.html">Property Name</a>
+                                                    <a href="#">Property Name</a>
 
                                                 </h5>
                                                 <p class="location text-1 line-clamp-1 ">
@@ -519,8 +517,7 @@
                                                     </div>
                                                     <div class="wrap-btn flex">
 
-                                                        <a href="property-detail-v1.html"
-                                                            class="tf-btn style-border pd-4">Details</a>
+                                                        <a href="#" class="tf-btn style-border pd-4">Details</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -529,7 +526,7 @@
                                     <div class="col-sm-6 col-md-4">
                                         <div class="box-house hover-img ">
                                             <div class="image-wrap">
-                                                <a href="property-detail-v1.html">
+                                                <a href="#">
                                                     <img class="lazyload" data-src="images/section/box-house.jpg"
                                                         src="images/section/box-house.jpg" alt="">
                                                 </a>
@@ -540,7 +537,7 @@
                                             </div>
                                             <div class="content">
                                                 <h5 class="title">
-                                                    <a href="property-detail-v1.html">Property Name</a>
+                                                    <a href="#">Property Name</a>
 
                                                 </h5>
                                                 <p class="location text-1 line-clamp-1 ">
@@ -580,8 +577,7 @@
                                                     </div>
                                                     <div class="wrap-btn flex">
 
-                                                        <a href="property-detail-v1.html"
-                                                            class="tf-btn style-border pd-4">Details</a>
+                                                        <a href="#" class="tf-btn style-border pd-4">Details</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -590,7 +586,7 @@
                                     <div class="col-sm-6 col-md-4">
                                         <div class="box-house hover-img ">
                                             <div class="image-wrap">
-                                                <a href="property-detail-v1.html">
+                                                <a href="#">
                                                     <img class="lazyload" data-src="images/section/box-house.jpg"
                                                         src="images/section/box-house.jpg" alt="">
                                                 </a>
@@ -601,7 +597,7 @@
                                             </div>
                                             <div class="content">
                                                 <h5 class="title">
-                                                    <a href="property-detail-v1.html">Property Name</a>
+                                                    <a href="#">Property Name</a>
 
                                                 </h5>
                                                 <p class="location text-1 line-clamp-1 ">
@@ -641,8 +637,7 @@
                                                     </div>
                                                     <div class="wrap-btn flex">
 
-                                                        <a href="property-detail-v1.html"
-                                                            class="tf-btn style-border pd-4">Details</a>
+                                                        <a href="#" class="tf-btn style-border pd-4">Details</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -651,7 +646,7 @@
                                     <div class="col-sm-6 col-md-4">
                                         <div class="box-house hover-img ">
                                             <div class="image-wrap">
-                                                <a href="property-detail-v1.html">
+                                                <a href="#">
                                                     <img class="lazyload" data-src="images/section/box-house.jpg"
                                                         src="images/section/box-house.jpg" alt="">
                                                 </a>
@@ -662,7 +657,7 @@
                                             </div>
                                             <div class="content">
                                                 <h5 class="title">
-                                                    <a href="property-detail-v1.html">Property Name</a>
+                                                    <a href="#">Property Name</a>
 
                                                 </h5>
                                                 <p class="location text-1 line-clamp-1 ">
@@ -702,8 +697,7 @@
                                                     </div>
                                                     <div class="wrap-btn flex">
 
-                                                        <a href="property-detail-v1.html"
-                                                            class="tf-btn style-border pd-4">Details</a>
+                                                        <a href="#" class="tf-btn style-border pd-4">Details</a>
                                                     </div>
                                                 </div>
                                             </div>
