--- a/portal/agents-details.html
+++ b/portal/agents-details.html
@@ -561,7 +561,7 @@
                                     <div id="sub-details" class="collapse" data-bs-parent="#dropdown-menu-two">
                                         <ul class="sub-mobile">
                                             <li class="menu-item">
-                                                <a href="property-detail-v1.html">Property Details 1</a>
+                                                <a href="#">Property Details 1</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="property-detail-v2.html">Property Details 2</a>
