--- a/portal/my-profile.html
+++ b/portal/my-profile.html
@@ -129,7 +129,7 @@
                                 </a>
                             </li>
                             <li class="nav-menu-item">
-                                <a class="nav-menu-link" href="messages.html">
+                                <a class="nav-menu-link" href="messages-for-agent.html">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
